# sequential-thinking-uv

./: LICENSE  README.md  SETUP_GUIDE.md  default.nix  flake.nix  pyproject.toml
sequential-thinking-mcp-uv/: .gitignore
src/sequential_thinking_mcp/: __init__.py  __main__.py  models.py  models_fixed.py  server.py  server_corrected.py  server_fastmcp.py  server_fixed.py
tests/: test_server.py
